# python-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_README.md  cookiecutter.json  test_template.sh
.github/: template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: test-template.yml
cli-coverage-test/: .coverage  .env.example  .pre-commit-config.yaml  README.md  SECURITY.md  config.yaml  coverage.xml  mkdocs.yml  pyproject.toml  run_cli-coverage-test.py
cli-coverage-test/.github/: dependabot.yml
cli-coverage-test/.github/workflows/: docs.yml  release.yml
cli-coverage-test/docs/: contributing.md  index.md
cli-coverage-test/src/cli_coverage_test/: __init__.py  cli.py  config.py  core.py  logger.py  services.py
cli-coverage-test/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_logger.py  test_services.py
hooks/: post_gen_project.py
test-coverage-check/: .coverage  .env.example  .pre-commit-config.yaml  README.md  SECURITY.md  config.yaml  coverage.xml  mkdocs.yml  pyproject.toml
test-coverage-check/.github/: dependabot.yml
test-coverage-check/.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
test-coverage-check/docs/: contributing.md  index.md
test-coverage-check/src/test_coverage_check/: __init__.py  config.py  core.py  logger.py  services.py
test-coverage-check/src/test_coverage_check.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test-coverage-check/tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_logger.py  test_services.py
test_project/: .env.example  .pre-commit-config.yaml  README.md  SECURITY.md  config.json  config.yaml  mkdocs.yml  pyproject.toml  run_test_project.py  test_project.py
test_project/.github/: dependabot.yml
test_project/.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
test_project/docs/: contributing.md  index.md
test_project/src/test_project/: __init__.py  cli.py  config.py  core.py  logger.py
test_project/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_logger.py  test_services.py
{{cookiecutter.project_slug}}/: .env.example  .pre-commit-config.yaml  .pre-commit-config.yaml.j2  README.md  SECURITY.md  SECURITY.md.j2  config.json  config.yaml  config.yaml.j2  mkdocs.yml  pyproject.toml  run_{{cookiecutter.project_slug}}.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/.github/: dependabot.yml  dependabot.yml.j2
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml  scorecard.yml.j2
{{cookiecutter.project_slug}}/docs/: contributing.md  index.md  index.md.j2
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py  config.py  config.py.j2  core.py  logger.py  services.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_logger.py  test_services.py
